# MikataSyatem

./: README.txt  setting.yaml
conf/: ManipulatorControlSample20.conf  MikataArm0.conf  rtc_cpp.conf
rtc/: CMakeLists.txt  RTC.xml  RTC.xml20231107183039  rtc.conf
rtc/ManipulatorControlSample2/: README.md
rtc/ManipulatorControlSample2/build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cpack_options.cmake  uninstall_target.cmake
rtc/ManipulatorControlSample2/build-linux/cmake/: Makefile  cmake_install.cmake  manipulatorcontrolsample2-config.cmake  manipulatorcontrolsample2.pc
rtc/ManipulatorControlSample2/build-linux/idl/: Makefile  cmake_install.cmake
rtc/ManipulatorControlSample2/cmake/: manipulatorcontrolsample2-config.cmake.in
rtc/ManipulatorControlSample2/doc/: conf.py.in
rtc/ManipulatorControlSample2/include/: CMakeLists.txt
rtc/ManipulatorControlSample2/src/: ManipulatorControlSample2Comp.cpp
rtc/MikataArmRTC/: CMakeLists.txt  MikataArm.conf  README.md  RTC.xml  rtc.conf
rtc/MikataArmRTC/build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cpack_options.cmake  uninstall_target.cmake
rtc/MikataArmRTC/build-linux/idl/: Makefile  (+13 more)
rtc/MikataArmRTC/cmake/: CMakeLists.txt20230731153317
rtc/MikataArmRTC/idl/: CMakeLists.txt20230728161516  CMakeLists.txt20230731153319
rtc/MikataArmRTC/libmikataarm/: CMakeLists.txt  README.md
rtc/MikataArmRTC/libmikataarm/src/: CMakeLists.txt  kinematics.cpp  kinematics_test.cpp  mikata.cpp  mikata_develop_test.cpp  mikata_kinematics_test.cpp  selfweightcomp_test.cpp  selfweightmeasure.cpp  test.cpp  unit_test.cpp
rtc/MikataArmRTC/src/: CMakeLists.txt  CMakeLists.txt20230728161518  CMakeLists.txt20230728163633  CMakeLists.txt20230731153320  ManipulatorCommonInterface_CommonSVC_impl.cpp  ManipulatorCommonInterface_CommonSVC_impl.cpp20230731153310  ManipulatorCommonInterface_MiddleLevelSVC_impl.cpp  ManipulatorCommonInterface_MiddleLevelSVC_impl.cpp20230731153308  ManipulatorCommonInterface_MiddleSVC_impl.cpp  MikataArm.cpp  MikataArm.cpp20230728161458  MikataArm.cpp20230731153712  MikataArm.cpp20230731153734  MikataArmComp.cpp20230728161457
rtc/scripts/ubuntu_1604/: Dockerfile
rtc/scripts/ubuntu_1804/: Dockerfile
rtc/src/: CMakeLists.txt  ManipulatorControlSample2.cpp
rtc/test/src/: ManipulatorCommonInterface_MiddleSVC_impl.cpp
system/: DefaultSystem.xml  DefaultSystem.xml20231114223122  DefaultSystem.xml20231114223713  DefaultSystem.xml20231114225923  DefaultSystem.xml20231115163204
(+71 files in other folders)
